# circuit

./: .dockerignore  .gitignore  DATASET_SETUP.md  DEPLOYMENT_GUIDE.md  LICENSE  PHASE2_IMPLEMENTATION_GUIDE.md  PROGRESS_REPORT.md  PROJECT_AUDIT.md  PROJECT_STATUS_SUMMARY.md  README.md  SERVER_SPECIFICATIONS.md  pyproject.toml  requirements.txt  train.py  train.sh
.github/workflows/: ci.yml  publish.yml
circuitcli/circuit_detection_v1/: args.yaml  events.out.tfevents.1750281584.MacBook-Pro.local.49654.0  events.out.tfevents.1750281588.MacBook-Pro.local.49742.0  events.out.tfevents.1750281594.MacBook-Pro.local.49760.0  events.out.tfevents.1750281599.MacBook-Pro.local.49775.0  events.out.tfevents.1750281604.MacBook-Pro.local.49801.0  events.out.tfevents.1750281609.MacBook-Pro.local.49825.0  events.out.tfevents.1750281614.MacBook-Pro.local.49840.0  events.out.tfevents.1750281618.MacBook-Pro.local.49855.0  events.out.tfevents.1750281623.MacBook-Pro.local.49871.0  events.out.tfevents.1750282719.MacBook-Pro.local.50657.0  events.out.tfevents.1750283990.MacBook-Pro.local.51470.0  events.out.tfevents.1750295422.MacBook-Pro.local.57670.0  events.out.tfevents.1750296410.MacBook-Pro.local.58206.0  events.out.tfevents.1750313419.MacBook-Pro.local.67677.0  events.out.tfevents.1750337132.MacBook-Pro.local.81381.0  events.out.tfevents.1750338916.MacBook-Pro.local.82004.0  results.csv
circuitcli/test/: args.yaml  events.out.tfevents.1750262247.MacBook-Pro.local.48877.0
circuitcli/test_fix/: args.yaml  events.out.tfevents.1750180579.Shrutis-MacBook-Pro.local.13298.0
circuitcli/test_yolo_format/: args.yaml  events.out.tfevents.1750180813.Shrutis-MacBook-Pro.local.13492.0
config/: augmentations.yaml  pin_templates.yaml  yolo_data.yaml
docker/: Dockerfile
kicad/: README.md  spiceguard_kicad.py
poc/: README.md  test_trustguard.py  trustguard.py
poc/netlists/: n1_missing_ground.cir  n2_floating_node.cir
runs/circuit_detection_v1/: events.out.tfevents.1750281583.MacBook-Pro.local  events.out.tfevents.1750281588.MacBook-Pro.local  events.out.tfevents.1750281593.MacBook-Pro.local  events.out.tfevents.1750281599.MacBook-Pro.local  events.out.tfevents.1750281603.MacBook-Pro.local  events.out.tfevents.1750281608.MacBook-Pro.local  events.out.tfevents.1750281613.MacBook-Pro.local  events.out.tfevents.1750281618.MacBook-Pro.local  events.out.tfevents.1750281623.MacBook-Pro.local  events.out.tfevents.1750282278.MacBook-Pro.local  events.out.tfevents.1750282282.MacBook-Pro.local  events.out.tfevents.1750282286.MacBook-Pro.local  events.out.tfevents.1750282290.MacBook-Pro.local  events.out.tfevents.1750282294.MacBook-Pro.local  events.out.tfevents.1750282297.MacBook-Pro.local  events.out.tfevents.1750282463.MacBook-Pro.local  events.out.tfevents.1750282467.MacBook-Pro.local  events.out.tfevents.1750282471.MacBook-Pro.local  events.out.tfevents.1750282474.MacBook-Pro.local  events.out.tfevents.1750282478.MacBook-Pro.local  events.out.tfevents.1750282482.MacBook-Pro.local  events.out.tfevents.1750282486.MacBook-Pro.local  events.out.tfevents.1750282490.MacBook-Pro.local  (+6 more)
scripts/: analyze_model_results.py  install_dependencies.py  quick_test.py  setup_cghd_dataset.py  setup_dataset.py  setup_system.py  test_phase2_implementation.py  test_trained_model.py  test_wandb_fix.py  test_wire_detection.py  train_detector.py  train_detector_no_wandb.py
src/circuitcli/: cli.py  (+1 more)
tests/: conftest.py  test_cli.py  test_core.py  test_dataset_preparation.py  test_kicad.py  test_ngspice_path.py  test_security.py  test_subcircuits.py  test_trustguard.py
vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
(+56 files in other folders)
