[tool.poetry]
name = "circuitcli"
version = "0.1.0"
description = "Image-to-Simulation Tool for Electrical Circuits"
authors = ["CircuitCLI Team"]
readme = "README.md"
packages = [{include = "circuitcli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
# Dataset & ML dependencies
torch = "^2.1.0"
torchvision = "^0.16.0"
ultralytics = "^8.0.0"
opencv-python = "^4.8.0"
albumentations = "^1.3.0"
# Experiment tracking
wandb = "^0.16.0"
tensorboardx = "^2.6.0"
# OCR dependencies
easyocr = "^1.7.0"
# Model export & optimization
onnx = "^1.15.0"
onnxruntime = "^1.16.0"
onnxoptimizer = "^0.3.13"
# Additional ML utilities
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
# Data versioning & validation
dvc = {extras = ["s3"], version = "^3.0.0"}
pycocotools = "^2.0.7"
# Graph & simulation dependencies
networkx = "^3.2"
pyspice = "^1.5.0"
# CLI & UX
click = "^8.1.0"
rich = "^13.0.0"
tqdm = "^4.66.0"
# Utilities
pyyaml = "^6.0"
pillow = "^10.0.0"
matplotlib = "^3.8.0"
pandas = "^2.1.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
circuitcli = "circuitcli.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/circuitcli --cov-report=term-missing" 